manifests/client-tools/base/debezium-ui/service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debezium-ui
  labels:
    app: debezium-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: debezium-ui
  template:
    metadata:
      labels:
        app: debezium-ui
    spec:

      containers:
        - name: debezium-ui
          image: debezium/debezium-ui:2.5
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
